# SlicerSegmentationVerification

./: CMakeLists.txt  README.md  SegmentationVerification.xcf
SegmentationVerification/: CMakeLists.txt  SegmentationVerification.py
SegmentationVerification/Resources/UI/: SegmentationVerification.ui
